# multi-echo-data-analysis

./: .gitignore  Makefile  README.md  _config.yml  genindex.html  objects.inv  prf-prf.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: build.yml
_sources/content/: 00_Download_Data.ipynb  01_Optimal_Combination_with_t2smap.ipynb  02_Volume-wise_T2star_estimation_with_t2smap.ipynb  05_3dMEPFM.ipynb  (+17 more)
content/: 00_Download_Data.html  01_Optimal_Combination_with_t2smap.html  01_Optimal_Combination_with_t2smap.md  02_Volume-wise_T2star_estimation_with_t2smap.html  02_Volume-wise_T2star_estimation_with_t2smap.md  03_Denoising_with_tedana.html  03_Denoising_with_tedana.md  04_Dual_Echo_Denoising.html  04_Dual_Echo_Denoising.md  05_3dMEPFM.html  05_3dMEPFM.md  06_Cerebrovascular_Reactivity_Mapping.html  07_Manual_Classification_with_rica.html  08_ICA_Based_Denoising.html  08_ICA_Based_Denoising.md  Acquiring_Multi_Echo_Data.html  Contributors.html  Course_Overview.html  Install_Software.html  MR_Physics.html  Multi_Echo_Datasets.html  Processing_Multi_Echo_Data.html  Recommended_Reading.html  Signal_Decay.md  TE_Dependence.html  bibliography.html  book_utils.py  build_information.html  fMRI_Sequences.html  fMRI_Sequences.md  glossary.html  intro.html  plot_approach_figures.html  plot_approach_figures.md
docs/: .buildinfo  genindex.html  objects.inv  prf-prf.html  search.html  searchindex.js
notebooks/: README_notebooks.html  fMRI_Sequences_pulse_sequence_visualizations.html
scripts/: clean.py  sync_docs.py
(+55 files in other folders)
